(site) Fix wrapping on examples page on mobile

--- a/site/public/css/planetaryjs.less
+++ b/site/public/css/planetaryjs.less
@@ -152,6 +152,13 @@ canvas#homepage-globe-canvas {
   img {
     width: 200px;
     height: 200px;
+    float: left;
+    margin-right: 20px;
+
+    @media screen and (max-width: 768px) {
+      display: block;
+      float: none;
+    }
   }
 }
 
